# csv2numbers

./: .gitignore  README.md  first-direct-to-numbers.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-coverage.yml  run-all-tests.yml
csv2numbers/: __init__.py  __main__.py  _csv2numbers.py
tests/: test_convert.py
tests/data/: format-2.numbers  matches.numbers
