[tool.poetry]
name = "csv2numbers"
version = "1.0.0"
description = "Automator scripts"
authors = ["Jon Connell <python@figsandfudge.com>"]
packages = [{include = "csv2numbers"}]
readme = "README.md"
repository = "https://github.com/masaccio/csv2numbers"

[tool.poetry.scripts]
csv2numbers = "csv2numbers._csv2numbers:main"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numbers-parser = "^4.4.6"
pandas = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest-console-scripts = "^1.4.1"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"
show_contexts = true

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov=csv2numbers --cov-report=html --cov-report=term-missing:skip-covered --cov-context=test"
script_launch_mode = "subprocess"

[tool.isort]
profile = "black"

[tool.ruff]
fix = true
line-length = 100
select = ["ALL"]
target-version = "py38"
ignore = ["PLR2004", "T201", "PTH123"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "ANN001"]